# rmicro_fw

./: .gitignore  Cargo.toml
fw_adapter/: Cargo.toml
fw_adapter/src/: cfg_bridge.rs  err_bridge.rs  lib.rs  web_bridge.rs
fw_adapter/src/web_bridge/: recorder.rs  response.rs  wrapper.rs
fw_base/: Cargo.toml
fw_base/benches/: rand_str_bench.rs  uuid_bench.rs
fw_base/src/: constants.rs  context.rs  lazy.rs  lib.rs  pass.rs  utils.rs
fw_base/src/configuration/: static_config.rs
fw_base/src/constants/: web_const.rs
fw_base/src/context/: web.rs
fw_base/src/lazy/: gw_forward.rs  gw_lazy.rs
fw_base/src/pass/: directly.rs  gw_pass.rs  json.rs  msgpack.rs  postcard.rs
fw_base/src/utils/: dy_trace.rs  parser.rs  rand.rs  time.rs
fw_boot/: Cargo.toml
fw_boot/src/: app.rs  boot.rs  config.rs  ext.rs  graceful.rs  lib.rs  state.rs
fw_crypto/: Cargo.toml
fw_crypto/benches/: cbc_bench.rs  ecb_bench.rs  gcm_bench.rs
fw_crypto/src/: aes.rs  b64.rs  hash.rs  hex.rs  lib.rs  rsa.rs
fw_crypto/src/aes/: cbc.rs  ecb.rs  gcm.rs
fw_error/: Cargo.toml
fw_error/src/: app_error.rs  lib.rs  lib_error.rs  recorder.rs  result.rs
fw_gateway/: Cargo.toml  readme.md
fw_gateway/src/: background.rs  config.rs  ext.rs  lib.rs  proxy.rs  router.rs  run.rs  state.rs
fw_gateway/src/config/: router_config.rs
fw_gateway/src/ext/: config_ext.rs  result_ext.rs
fw_log/: Cargo.toml
fw_log/src/: lib.rs  log.rs  time_fmt.rs
fw_regdis/: Cargo.toml
fw_regdis/src/: nacos.rs
fw_regdis/src/nacos/: client.rs  configuration.rs  configure.rs  discovery.rs  proxy.rs  registry.rs
fw_rpc/: Cargo.toml
fw_rpc/src/: lib.rs  tonic_srv.rs
fw_rpc/src/tonic_srv/: caller.rs  chain_ext.rs  chan_factory.rs  layer.rs  middleware.rs  provider.rs  server.rs  tracer.rs
fw_sqlx/: Cargo.toml
fw_sqlx/src/mysql/: client.rs
fw_web/: Cargo.toml
fw_web/src/: axum_srv.rs  lib.rs
fw_web/src/axum_srv/: chain_ext.rs  middleware.rs  server.rs  utils.rs
