[workspace]
resolver = "3"
members = ["fw_base", "fw_boot", "fw_adapter", "fw_error", "fw_gateway", "fw_log", "fw_regdis", "fw_rpc", "fw_sqlx", "fw_web", "fw_crypto"]


[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# rpc框架
tonic = "0.12"
tonic-build = "0.12"

# 增强protobuf
prost = "0.13"

# 极致轻量序列化
postcard = { version = "1", features = ["use-std"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# 解析如: 30s之类的时间
humantime-serde = "1"

# 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "ansi"] }
tracing-appender = "0.2"

http = { version = "1.4" }

# web框架
axum = { version = "0.7", features = ["macros"] }

# nacos注册/发现
nacos-sdk = { version = "0.6", features = ["default"] }

# 并发安全map
dashmap = "6"

tower = { version = "0.4", features = ["discover", "timeout"] }
tower-http = { version = "0.6", features = ["trace"] }

tokio-stream = "0.1"

# 本地ip
local-ip-address = "0.6.10"

# 环境参数
dotenv = "0.15"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 异步trait
async-trait = { version = "0.1" }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 原子无锁swap
arc-swap = { version = "1.8" }

singleflight-async = { version = "0.2" }

sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "migrate", "chrono"] }

regex = "1.12"

futures = "0.3"

pin-project = { version = "1.1" }

uuid = { version = "1", features = ["rng", "v7"] }

# msgpack
rmp-serde = { version = "1" }

rand = { version = "0.8", features = ["small_rng"] }

# 基准测试
criterion = { version = "0", features = ["html_reports"] }

# 并发迭代器
rayon = { version = "1" }