[package]
name = "fw_base"
version = "0.1.0"
edition = "2024"

[dependencies]
fw_error = { path = "../fw_error" }
fw_crypto = { path = "../fw_crypto" }

local-ip-address = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
humantime-serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rmp-serde = { workspace = true } # msg-pack
postcard = { workspace = true }

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }

[[bench]]
name = "uuid_bench"
harness = false