[package]
name = "fw_crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
fw_error = { path = "../fw_error" }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

base64 = { version = "0", features = ["std"] }
aes-gcm = { version = "0" }
rand = { workspace = true }
hex = { version = "0" }
aes = "0"
cbc = { version = "0", features = ["std"] }
ecb = "0"
rsa = { version = "0", features = ["pem"] }
sha2 = { version = "0" }
hmac = { version = "0" }
sha1 = "0"
#digest = "0"

[dev-dependencies]
criterion = { workspace = true }

#[[bench]]
#name = "ecb_bench"
#harness = false

#[[bench]]
#name = "cbc_bench"
#harness = false

[[bench]]
name = "gcm_bench"
harness = false

