[package]
name = "fw_sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
fw_error = { path = "../fw_error" }
fw_regdis = { path = "../fw_regdis" }

tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }