[package]
name = "fw_web"
version = "0.1.0"
edition = "2024"

[dependencies]
fw_error = { path = "../fw_error" }
fw_boot = { path = "../fw_boot" }

tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }